--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -1,9 +1,11 @@
 services:
   - type: web
-    name: art-emotion-api
-    runtime: python3
+    name: crypto-predictor-ai
+    env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn -w 4 -k uvicorn.workers.UvicornWorker api:app --bind 0.0.0.0:$PORT
+    startCommand: uvicorn api:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: OPENAI_API_KEY
-        sync: false 
+        sync: false
+      - key: PYTHON_VERSION
+        value: 3.9.4 
