--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://crypto-predictor-ai.onrender.com/:path*"
+      "destination": "/api/:path*"
     }
   ],
   "headers": [
