--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.7",
     "next": "15.1.7",
     "react": "^19.0.0",
